--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Резюме - Эдита Някс Скульстад, художник, переводчик и создатель нейро-помощников</title>
-    <link rel="icon" type="image/png" href="favicon.png">
+     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="scss/main.css">
 </head>
